kubernetes-networks/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: homework
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 33%
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
          - containerPort: 8000
        volumeMounts:
        - name: nginx-conf
          mountPath: /etc/nginx
        - name: shared-volume
          mountPath: /homework
        lifecycle:
          postStart:
            exec:
              command: ["/bin/bash", "-c", "touch /homework/Started--$(hostname)"]
        readinessProbe:
          httpGet:
            path: /
            port: 8000
#            httpHeaders:
#              - name:  X-Header-Name
#                value: myheader
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3 
        livenessProbe:
          exec:
            command: ["/bin/sh", "-c", "test -f /homework/index.html"]
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3      
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: homework
                operator: In
                values:
                - "true"
      volumes:
      - name: nginx-conf
        configMap:
          name: nginx-conf
      - name: shared-volume
        persistentVolumeClaim:
          claimName: pvc-local
