kubernetes-networks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: homework
  labels: 
    app: nginx
spec:
  type: ClusterIP
  ports:
    - name: nginx
      port: 8000
      targetPort: 8000
  selector:
    app: nginx
